force-app/main/default/objects/Bulk_Record_Upload__c/Bulk_Record_Upload__c.object-meta.xml
<CustomObject>
    <description
  >The Bulk Record Upload object records one authorized CSV submission, its lifecycle, bounded counts, retention, and Salesforce File references. Commonly used for upload history, partial-result review, retry correlation, and retention cleanup.</description>
    <label>Bulk Record Upload</label>
    <nameField>
        <displayFormat>UPLOAD-{000000}</displayFormat>
        <label>Upload Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Record Uploads</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>