force-app/main/default/objects/Bulk_Record_Upload__c/fields/ActiveOrgSlot__c.field-meta.xml
<CustomField>
    <fullName>ActiveOrgSlot__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description
  >Atomically reserves one of the ten organization-wide active upload slots. Terminal transitions clear the value.</description>
    <inlineHelpText
  >Managed internally while an upload is queued, validating, or processing.</inlineHelpText>
    <label>Active Organization Slot</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>