force-app/main/default/objects/Bulk_Record_Upload__c/fields/ActiveUserProcessKey__c.field-meta.xml
<CustomField>
    <fullName>ActiveUserProcessKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description
  >Atomically reserves the single active-upload slot for one running user and process. Terminal transitions clear the value.</description>
    <inlineHelpText
  >Managed internally while an upload is queued, validating, or processing.</inlineHelpText>
    <label>Active User Process Key</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>