force-app/main/default/objects/Bulk_Record_Upload__c/fields/CompletedAt__c.field-meta.xml
<CustomField><fullName
  >CompletedAt__c</fullName><description
  >Records when the upload reached a terminal lifecycle status.</description><inlineHelpText
  >Shows when processing completed or failed.</inlineHelpText><label
  >Completed At</label><type>DateTime</type></CustomField>