force-app/main/default/objects/Bulk_Record_Upload__c/fields/ConfigHash__c.field-meta.xml
<CustomField>
    <fullName>ConfigHash__c</fullName>
    <description
  >Stores the immutable configuration fingerprint accepted when the upload was submitted so asynchronous processing can reject configuration drift.</description>
    <inlineHelpText
  >Used internally to verify that staged rows are processed with the same configuration that validated them.</inlineHelpText>
    <label>Submitted Configuration Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>