force-app/main/default/objects/Bulk_Record_Upload__c/fields/ContextRecordId__c.field-meta.xml
<CustomField>
    <fullName>ContextRecordId__c</fullName>
    <description
  >Stores the verified record-page context used as the parent during asynchronous processing.</description>
    <inlineHelpText
  >Salesforce validates this record ID against the upload process before processing.</inlineHelpText>
    <label>Context Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>