force-app/main/default/objects/Bulk_Record_Upload__c/fields/ExpiresAt__c.field-meta.xml
<CustomField>
    <fullName>ExpiresAt__c</fullName>
    <description
  >Computes the exact retention cutoff used by bounded cleanup workers.</description>
    <inlineHelpText
  >Shows when this upload becomes eligible for retention cleanup.</inlineHelpText>
    <formula>CompletedAt__c + BLANKVALUE(RetentionDays__c, 90)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expires At</label>
    <type>DateTime</type>
</CustomField>