force-app/main/default/objects/Bulk_Record_Upload__c/fields/FailureCount__c.field-meta.xml
<CustomField>
  <fullName>FailureCount__c</fullName>
  <description
  >Stores the number of rows that returned a redacted failure result.</description>
  <inlineHelpText
  >Shows rows that failed and require review in the results file.</inlineHelpText>
  <label>Failed Rows</label>
  <precision>5</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>