force-app/main/default/objects/Bulk_Record_Upload__c/fields/IdempotencyKey__c.field-meta.xml
<CustomField>
  <fullName>IdempotencyKey__c</fullName>
  <description
  >Stores the client submission key used to prevent duplicate work for one user and process within the documented window.</description>
  <inlineHelpText
  >Generated by the upload experience. Reusing an active key returns the original upload.</inlineHelpText>
  <label>Duplicate Prevention Key</label>
  <length>64</length>
  <required>true</required>
  <type>Text</type>
</CustomField>