force-app/main/default/objects/Bulk_Record_Upload__c/fields/InputFileId__c.field-meta.xml
<CustomField><fullName
  >InputFileId__c</fullName><description
  >Stores the authorized Salesforce ContentDocument identifier for the original CSV.</description><inlineHelpText
  >References the original CSV. Salesforce Files access still controls downloads.</inlineHelpText><label
  >Input File ID</label><length>18</length><type>Text</type></CustomField>