force-app/main/default/objects/Bulk_Record_Upload__c/fields/IsArchived__c.field-meta.xml
<CustomField>
  <fullName>IsArchived__c</fullName>
  <defaultValue>false</defaultValue>
  <description
  >Hides this upload from ordinary history without changing its retention deadline or security.</description>
  <inlineHelpText
  >Select to hide this upload from ordinary history. Archiving does not extend retention.</inlineHelpText>
  <label>Hidden from Upload History</label>
  <type>Checkbox</type>
</CustomField>