force-app/main/default/objects/Bulk_Record_Upload__c/fields/LastErrorCode__c.field-meta.xml
<CustomField><fullName
  >LastErrorCode__c</fullName><description
  >Stores a safe diagnostic category for the most recent fatal processing failure.</description><inlineHelpText
  >Use this code with the safe error message when troubleshooting a failed upload.</inlineHelpText><label
  >Last Error Code</label><length>80</length><type>Text</type></CustomField>