force-app/main/default/objects/Bulk_Record_Upload__c/fields/LastErrorMessage__c.field-meta.xml
<CustomField><fullName
  >LastErrorMessage__c</fullName><description
  >Stores a bounded, non-sensitive administrator message for the most recent fatal processing failure.</description><inlineHelpText
  >This message excludes CSV values and internal exception details.</inlineHelpText><label
  >Last Error Message</label><length>255</length><type>Text</type></CustomField>