force-app/main/default/objects/Bulk_Record_Upload__c/fields/ProcessDeveloperName__c.field-meta.xml
<CustomField>
  <fullName>ProcessDeveloperName__c</fullName>
  <description
  >Stores the validated process Developer Name used for immutable upload correlation.</description>
  <inlineHelpText
  >Identifies the approved process used for this upload.</inlineHelpText>
  <label>Upload Process API Name</label>
  <length>80</length>
  <required>true</required>
  <type>Text</type>
</CustomField>