force-app/main/default/objects/Bulk_Record_Upload__c/fields/ProcessingStartedAt__c.field-meta.xml
<CustomField><fullName
  >ProcessingStartedAt__c</fullName><description
  >Records when asynchronous row processing began without overwriting submission time.</description><inlineHelpText
  >Shows when asynchronous processing began.</inlineHelpText><label
  >Processing Started At</label><type>DateTime</type></CustomField>