force-app/main/default/objects/Bulk_Record_Upload__c/fields/ResultFileId__c.field-meta.xml
<CustomField><fullName
  >ResultFileId__c</fullName><description
  >Stores the authorized Salesforce ContentDocument identifier for the versioned results CSV.</description><inlineHelpText
  >References the result CSV. Salesforce Files access still controls downloads.</inlineHelpText><label
  >Result File ID</label><length>18</length><type>Text</type></CustomField>