force-app/main/default/objects/Bulk_Record_Upload__c/fields/RowCount__c.field-meta.xml
<CustomField>
  <fullName>RowCount__c</fullName>
  <description
  >Stores the validated number of CSV data rows accepted for processing.</description>
  <inlineHelpText
  >Shows the number of accepted data rows, up to 5,000.</inlineHelpText>
  <label>Total Rows</label>
  <precision>5</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>