force-app/main/default/objects/Bulk_Record_Upload__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <description
  >Stores the stable version 1 upload lifecycle value used by runtime orchestration and administrator history.</description>
  <inlineHelpText
  >Review the current upload state. Statuses move forward from Queued to one terminal result.</inlineHelpText>
  <label>Upload Status</label>
  <required>true</required>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value>
        <fullName>QUEUED</fullName>
        <default>true</default>
        <label>Queued</label>
      </value>
      <value>
        <fullName>VALIDATING</fullName>
        <label>Validating</label>
      </value>
      <value>
        <fullName>PROCESSING</fullName>
        <label>Processing</label>
      </value>
      <value>
        <fullName>COMPLETED</fullName>
        <label>Completed</label>
      </value>
      <value>
        <fullName>COMPLETED_WITH_ERRORS</fullName>
        <label>Completed With Errors</label>
      </value>
      <value>
        <fullName>FAILED</fullName>
        <label>Failed</label>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>