force-app/main/default/objects/Bulk_Record_Upload__c/fields/SubmittedAt__c.field-meta.xml
<CustomField><fullName
  >SubmittedAt__c</fullName><description
  >Records when the server accepted the authorized upload request.</description><inlineHelpText
  >Shows when Salesforce accepted the upload.</inlineHelpText><label
  >Submitted At</label><required>true</required><type
  >DateTime</type></CustomField>