force-app/main/default/objects/Bulk_Record_Upload__c/fields/SuccessCount__c.field-meta.xml
<CustomField>
  <fullName>SuccessCount__c</fullName>
  <description
  >Stores the number of rows that completed successfully.</description>
  <inlineHelpText>Shows rows that completed successfully.</inlineHelpText>
  <label>Successful Rows</label>
  <precision>5</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>