force-app/main/default/objects/Bulk_Record_Upload__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProcessDeveloperName__c</columns>
    <columns>Status__c</columns>
    <columns>SubmittedAt__c</columns>
    <columns>RowCount__c</columns>
    <columns>SuccessCount__c</columns>
    <columns>FailureCount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Uploads</label>
</ListView>