force-app/main/default/objects/Bulk_Record_Upload__c/listViews/In_Progress.listView-meta.xml
<ListView>
    <fullName>In_Progress</fullName>
    <columns>NAME</columns>
    <columns>ProcessDeveloperName__c</columns>
    <columns>Status__c</columns>
    <columns>SubmittedAt__c</columns>
    <columns>RowCount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>QUEUED,VALIDATING,PROCESSING</value>
    </filters>
    <label>Uploads in Progress</label>
</ListView>