force-app/main/default/objects/Bulk_Record_Upload__c/listViews/Needs_Attention.listView-meta.xml
<ListView>
    <fullName>Needs_Attention</fullName>
    <columns>NAME</columns>
    <columns>ProcessDeveloperName__c</columns>
    <columns>Status__c</columns>
    <columns>CompletedAt__c</columns>
    <columns>FailureCount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>COMPLETED_WITH_ERRORS,FAILED</value>
    </filters>
    <label>Uploads Needing Attention</label>
</ListView>